<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Overcoming Gravity</string>
    <string name="descrtosupport">asdfasdgfagjdslköjlköjkljkljlkjkljlökjlkjjklkljoijiojkljj</string>
    <string name="title_section1">Handstand</string>
    <string name="title_section2">Manna</string>
    <string name="title_section3">Bent Arm Press HS</string>
    <string name="title_section4">Straight Arm Press HS</string>
    <string name="title_section5">Back Lever</string>
    <string name="title_section6">Front Lever</string>
    <string name="title_section7">Planche</string>
    <string name="title_section8">Plank</string>
    <string name="title_section9">Elbow Levers</string>
    <string name="title_section10">Flags</string>
    <string name="title_section11">Iron Cross</string>
    <string name="title_section12">Miscellaneous Skills</string>
    <string name="Calisthenics">Calisthenics Skills</string>
    <string name="Handstand">Handstand</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="lifts">Lifts</string>
    <string name="elite">Elite</string>
    <string name="title_activity_handstand_start">Handstand_start</string>
    <string name="tuckbl">Tuck Back Lever</string>
    <string name="advtuckbl">Advanced Tuck Back Lever</string>
    <string name="straddlebl">Straddle Back Lever</string>
    <string name="halflaybl">1/2 Layout Back Lever</string>
    <string name="fullbl">Full Back Lever</string>
    <string name="tuckfl">Tuck Front Lever</string>
    <string name="advtuckfl">Advanced Tuck Front Lever</string>
    <string name="straddlefl">Straddle Front Lever</string>
    <string name="halflayfl">1/2 Layout Front Lever</string>
    <string name="fullfl">Full Front Lever</string>
    <string name="frogstand">Frog Stand</string>
    <string name="safrogstand">Straight-Arm Frog Stand</string>
    <string name="tuckpl">Tuck Planche</string>
    <string name="advtuckpl">Advanced Tuck Planche</string>
    <string name="straddlepl">Straddle Planche</string>
    <string name="halflaypl">1/2 Layout Planche</string>
    <string name="sastrpltohs">Straight-Arm Straddle Planche to Handstand</string>
    <string name="fullpl">Full Planche</string>
    <string name="ringsfullpl">Rings Full Planche</string>
    <string name="twoarmel">Two-Arm Elbow Lever</string>
    <string name="ringstwoarmel">Rings Two-Arm Elbow Lever</string>
    <string name="oastraddleel">One-Arm Straddle Elbow Lever</string>
    <string name="oasbel">One-Arm Straight-Body Elbow Lever</string>
    <string name="lev1_2">1-2</string>
    <string name="two">2</string>
    <string name="exec">Exercise Detail</string>
    <string name="goo">GO</string>
    <string name="title_activity_handstand_first">Beginner Skills</string>
    <string name="wallhs">Wall Handstand</string>
    <string name="freehs">Free Handstand</string>
    <string name="title_activity_handstandtwo">Beginner Skills</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_handstandone">Handstandone</string>
    <string name="title_activity_handstand_second">Handstand_second</string>
    <string name="time">00:00:00</string>
    <string name="title_activity_timer">Timer</string>
    <string name="stop">STOP</string>
    <string name="best">00:00:00</string>
    <string name="record">Record: </string>
    <string name="skill">Skill </string>
    <string name="tucklsit">Tuck L-Sit</string>
    <string name="oneleglsit">One Leg Bent L-Sit</string>
    <string name="lsit">L-Sit</string>
    <string name="slsit">Straddle L-Sit</string>
    <string name="rtolsit">Rings Turned Out L-Sit</string>
    <string name="vsitone">45 Degree V-Sit</string>
    <string name="vsittwo">75 Degree V-Sit</string>
    <string name="rtoslsit">Rings Turned Out Straddle L-Sit</string>
    <string name="rvsitone">Rings 45 Degree V-Sit</string>
    <string name="rvsittwo">Rings 75 Degree V-Sit</string>
    <string name="rvsitthree">Rings 90 Degree V-Sit</string>
    <string name="vsitthree">100 Degree V-Sit</string>
    <string name="vsitfour">120 Degree V-Sit</string>
    <string name="vsitfive">140 Degree V-Sit</string>
    <string name="vsitsix">155 Degree V-Sit</string>
    <string name="vsitseven">170 Degree V-Sit</string>
    <string name="manna">Manna</string>
    <string name="level">Level</string>
    <string name="lev1">1</string>
    <string name="lev2">2</string>
    <string name="lev3">3</string>
    <string name="lev4">4</string>
    <string name="lev1_4">1-4</string>
    <string name="lev5">5</string>
    <string name="lev6">6</string>
    <string name="lev7">7</string>
    <string name="lev8">8</string>
    <string name="lev10">10</string>
    <string name="lev9">9</string>
    <string name="lev11">11</string>
    <string name="lev12">12</string>
    <string name="lev13">13</string>
    <string name="lev14">14</string>
    <string name="straddlelsit">Straddle L-Sit</string>
    <string name="supporthold">Support Hold</string>
    <string name="rstraphs">Ring Strap Handstand</string>
    <string name="chs">Chair Handstand</string>
    <string name="ichs">Illusion Chair Handstand</string>
    <string name="germanhang">German Hang</string>
    <string name="ringshstand">Ring Shoulder Stand</string>
    <string name="hsff">Free HS 4 Fingers for One-Arm Support</string>
    <string name="hstf">Free HS 3 Fingers for One-Arm Support</string>
    <string name="hstwof">Free HS 2 Fingers for One-Arm Support</string>
    <string name="hsof">Free HS 1 Fingers for One-Arm Support</string>
    <string name="onearmhs">One Arm Handstand</string>
    <string name="rhs">Ring Handstand</string>
    <string name="rtosupport">RTO Support Hold</string>
    <string name="title_activity_lsit">Lsit</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fragment_tuck_lsit">Fragment_tuckLsit</string>
    <string name="title_activity_lsit_ex">Lsit_ex</string>
    <string name="title_activity_show_settings">ShowSettingsActivity</string>
    <string name="title_activity_handstand_main">Handstand_main</string>
    <string name="title_activity_wall_handstand">WallHandstand</string>
    <string name="title_activity_free_handstand">FreeHandstand</string>
    <string name="title_activity_ring_sh_stand">RingShStandActivity</string>
    <string name="title_activity_ring_strap_hs">RingStrapHSActivity</string>
    <string name="title_activity_chair_hs">ChairHSActivity</string>
    <string name="title_activity_tuck_lsit">TuckLSitActivity</string>
    <string name="title_activity_one_leg_lsit">OneLegLsitActivity</string>
    <string name="title_activity_rtosupport">RTOSupportActivity</string>
    <string name="title_activity_german_hang">GermanHangActivity</string>
    <string name="title_activity_hsfour_fingers">HSFourFingersActivity</string>
    <string name="title_activity_">Activity</string>
    <string name="title_activity_ring_hs">RingHSActivity</string>
    <string name="title_activity_ill_chair_hs">IllChairHSActivity</string>
    <string name="title_activity_hsthree_fingers">HSThreeFingersActivity</string>
    <string name="title_activity_hstwo_fingers">HSTwoFingersActivity</string>
    <string name="title_activity_hsone_fingers">HSOneFingersActivity</string>
    <string name="title_activity_one_arm_hs">OneArmHSActivity</string>
    <string name="title_activity_straddle_lsit">StraddleLsit</string>
    <string name="title_activity_rtolsit">RTOLsitActivity</string>
    <string name="title_activity_vsit_one">VsitOneActivity</string>
    <string name="title_activity_rtostraddle_lsit">RTOStraddleLsitActivity</string>
    <string name="title_activity_vsit_two">VsitTwoActivity</string>
    <string name="title_activity_rvsit_one">RVsitOneActivity</string>
    <string name="title_activity_vsit_three">VsitThreeActivity</string>
    <string name="title_activity_rvsit_two">RVsitTwoActivity</string>
    <string name="title_activity_vsit_four">VsitFourActivity</string>
    <string name="title_activity_vsit_five">VsitFiveActivity</string>
    <string name="title_activity_vsit_six">VsitSixActivity</string>
    <string name="title_activity_vsit_seven">VsitSevenActivity</string>
    <string name="title_activity_manna">MannaActivity</string>

</resources>